# Paper-Mill-Detection

./: .zenodo.json  CHANGELOG.md  README.md  leave_hindawi_out_sensitivity.py  pyproject.toml
repository/: README_osf.md
src/: __init__.py  pipeline.py
src/analyse/: geographic.py  journal_analysis.py  prevalence.py  temporal_trends.py
src/classify/: classifier.py  feature_builder.py  pu_learning.py  validator.py
src/collect/: openalex_collector.py  pmc_fetcher.py  retraction_loader.py
src/detect/: ai_text_detector.py  author_network.py  bibliometric_flags.py  citation_analyser.py  similarity_detector.py  structure_scorer.py  tortured_phrases.py
