[project]
name = "paper-mill-detection"
version = "0.1.0"
description = "NLP pipeline to detect paper mill characteristics in the medical AI literature"
requires-python = ">=3.10"
dependencies = [
    "pyalex>=0.14",
    "requests>=2.31",
    "lxml>=5.0",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "numpy>=1.26",
    "tqdm>=4.66",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "ipykernel",
    "pytest",
]
